--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-
-
 a, h1, h2, h3, button {
   font-family: "Sofia Sans", sans-serif;
   font-optical-sizing: auto;
@@ -7,100 +5,376 @@ a, h1, h2, h3, button {
   font-style: normal;
 }
 
-.header { 
-    position: relative; 
-    width: 100%; 
-    height: 100vh; /* Висота на всю сторінку */ 
-    overflow: hidden; 
-  }
-  header img{
-    width: 69px;
-    height: 63px;
-    margin: 20px 0px 0px 100px;
-  }
-  header a{
-    color: rgba(255, 255, 255, 1);
-    text-decoration: none;
-    font-size: 14.7px;
-    font-weight: 500;
-  }
-  .header-video{
-    width: 100%;
-    height: 100%;
-  }
-  header button{
-    width: 7.3vw;
-    height: 4vh;
-    border-radius: 6px;
-    background-color: rgba(255, 255, 255, 1);
-    color: rgba(30, 31, 34, 1);
-    font-size: 15.7px;
-    font-weight: 600;
-    cursor: pointer;
-  }
-  .header-ul, .ul-informtion{
-    line-height: 1.5;
-    list-style: none;
-    list-style-position: initial;
-    list-style-image: initial;
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    margin-left: -100px;
-  }
-  .header-li, .li-informtion{
-    margin: -57px 80px 0px 0px;
-  }
+.about-container {
+  width: 100%;
+  background-color: black;
+  margin-top: -10px;
+  padding: 170px 5%;
+  text-align: center;
+  color: #f47c20;
+}
+
+/* Стилі Тренерів */
+.about-coach {
+  width: 100%;
+  color: #ffffff;
+  background-color: #1E1F22;
+  padding: 170px 5%;
+  text-align: center;
+}
+
+.coach-title {
+  font-size: 2.5em;
+  margin-bottom: 40px;
+  color: #ffffff;
+}
+
+.coach-container {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  padding: 0 5%;
+}
+
+.coach {
+  display: flex;
+  flex-direction: row;
+  max-width: 800px;
+  text-align: left;
+  padding: 20px;
+  gap: 20px;
+}
+
+.coach-image {
+  width: 250px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.coach-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.coach-h2 {
+  text-align: left;
+  margin-left: 150px;
+}
+.coach2-h2 {
+  text-align: right;
+  margin-left: -200px;
+  margin-top: -30px;
+  margin-right: 150px;
+}
 
 
-.video-background video { 
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  width: 100vw; 
-  height: 100vh; 
-  object-fit: cover; /* Масштабує відео, щоб воно займало весь екран */ 
-  z-index: -2; /* Відео на фоні */ 
-  }
+.coach-p {
+  text-align: left;
+}
+
+.coach p {
+  font-size: 1em;
+  line-height: 1.6;
+  color: #e0e0e0;
+  margin-top: 15px;
+}
+
+
+
+
+
+
+
+/* Стилі про нас */
+.about-title {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.about-text {
+  font-size: 21.2px;
+  padding:0 10% 0px 10% ;
+  
+  line-height: 1.6;
+  color: #f47c20;
+}
+
+.video-container {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  
+}
+
+.video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.header-video{
+  width: 100%;
+  height: 100%;
+}
+
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(30, 31, 34, 0.8);
+  padding: 20px 5%;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+.nav-bar {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.logo {
+  width: 50px;
+  height: auto;
+}
+
+.header-ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  flex-wrap: wrap;
+}
+
+.header-li a {
+  color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.signup-btn {
+  width: auto;
+  padding: 10px 20px;
+  border-radius: 6px;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgba(30, 31, 34, 1);
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+}
+.signup-btn:hover{
+  background-color: rgba(243, 130, 55, 1);
+  color: #000;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+
 .label {
-    display: inline-flex;
-    align-items: center;
-    cursor: pointer;
-    color: #394a56;
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  color: #394a56;
+}
+
+
+.toggle {
+  isolation: isolate;
+  position: relative;
+  height: 20px;
+  width: 40px;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: -8px -4px 8px 0px #ffffff,
+  8px 4px 12px 0px #d1d9e6,
+  4px 4px 4px 0px #d1d9e6 inset,
+  -4px -4px 4px 0px #ffffff inset;
+}
+.toggle-a{
+  color: rgba(255, 255, 255, 1);
+  text-decoration: none;
+}
+
+.toggle-state {
+  display: none;
+}
+
+.indicator {
+  height: 100%;
+  width: 200%;
+  background: #ecf0f3;
+  border-radius: 15px;
+  transform: translate3d(-75%, 0, 0);
+  transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
+  box-shadow: -8px -4px 8px 0px #ffffff,
+  8px 4px 12px 0px #d1d9e6;
+}
+
+.toggle-state:checked ~ .indicator {
+  transform: translate3d(25%, 0, 0);
+}
+
+
+ /* Subscription Section */
+ .subscriptions {
+  background-color: rgba(18, 20, 20, 1);
+  width: 100%;
+  min-width: 400px;
+  padding: 50px 3%
+}
+
+.subscriptions h1 {
+  color: rgba(217, 116, 3, 1);
+  font-size: 68px;
+  padding: 30px 0px 0px 10px;
+  margin-bottom: 20px;
+}
+
+.subscription-cards {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.subscription-card {
+  border: 5px solid rgba(217, 116, 3, 1);
+  border-radius: 20px;
+  padding: 30px;
+  width: 100%;
+  max-width: 380px;
+  text-align: center;
+  background-color: rgba(18, 20, 20, 1);
+  color: rgba(217, 116, 3, 1);
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+.subscription-card:hover{
+  border: 5px solid rgba(243, 130, 55, 1);
+  background-color: rgba(236, 240, 243, 1);
+  transition: background-color 0.8s, color 0.3s;
+}
+
+.subscription-card h3 {
+  font-size: 36px;
+  margin-top: 10px;
+}
+
+.subscription-card ul {
+  border-bottom: 2px solid rgba(217, 116, 3, 1);
+  font-size: 18px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  list-style-type: none;
+}
+
+.subscription-card ul li {
+  margin: 10px 0;
+  text-align: left;
+}
+
+.subscription-card .price {
+  font-size: 32px;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.subscription-card button {
+  background-color: transparent;
+  color: rgba(217, 116, 3, 1);
+  border: 2px solid rgba(217, 116, 3, 1);
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.subscription-card button:hover {
+  border: 2px solid rgba(243, 130, 55, 1);
+  background-color: rgba(243, 130, 55, 1);
+  color: #000;
+}
+
+@media (max-width: 480px) {
+  .gallery-container {
+      grid-template-columns: 1fr;
+      grid-auto-rows: 150px;
   }
-  
-  .label-text {
-    margin-left: 16px;
+
+  .gallery-item.large, .gallery-item.medium, .gallery-item.wide, .gallery-item.small {
+      grid-column: span 1;
+      grid-row: span 1;
   }
-  
-  .toggle {
-    isolation: isolate;
-    position: relative;
-    height: 30px;
-    width: 60px;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: -8px -4px 8px 0px #ffffff,
-      8px 4px 12px 0px #d1d9e6,
-      4px 4px 4px 0px #d1d9e6 inset,
-      -4px -4px 4px 0px #ffffff inset;
+}
+.gallery{
+  background-color: rgba(30, 31, 34, 1);
+}
+.grid-container, h1{
+  color: rgba(255, 255, 255, 1);
+  font-size: 78px;
+  text-align: center;
+  margin-bottom: 50px;
+  text-align: left;
+  margin-left: 80px;
+  padding-top: 30px;
+}
+
+.grid-container {
+  columns: 5 200px;
+  column-gap: 1.5rem;
+  width: 90%;
+  margin: 0 auto;
+  div {
+    width: 150px;
+    margin: 0 1.5rem 1.5rem 0;
+    display: inline-block;
+    width: 100%;
+    border: solid 2px black;
+    padding: 5px;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    border-radius: 5px;
+    transition: all .25s ease-in-out;
+    &:hover img {
+      filter: grayscale(0);
+    }
+    &:hover {
+      border-color: coral;
+    }
+    img {
+      width: 100%;
+      filter: grayscale(100%);
+      border-radius: 5px;
+      transition: all .25s ease-in-out;
+    }
+    p {
+      margin: 5px 0;
+      padding: 0;
+      text-align: center;
+      font-style: italic;
+    }
   }
-  
-  .toggle-state {
-    display: none;
-  }
-  
-  .indicator {
-    height: 100%;
-    width: 200%;
-    background: #ecf0f3;
-    border-radius: 15px;
-    transform: translate3d(-75%, 0, 0);
-    transition: transform 0.4s cubic-bezier(0.85, 0.05, 0.18, 1.35);
-    box-shadow: -8px -4px 8px 0px #ffffff,
-      8px 4px 12px 0px #d1d9e6;
-  }
-  
-  .toggle-state:checked ~ .indicator {
-    transform: translate3d(25%, 0, 0);
-  }
+}
